# factorials

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  main-c.js  main-pure-rust.rs  main.c  main.js  main.rs  package.json  primes-pure-c.c  primes-wasm.c  ptrs.c  rollup.config.js
c/: CMakeLists.txt  Makefile  main.js  primes.h
c/pure/: main.c
c/wasm/: main.c
cc/: CMakeLists.txt  main.js  primes.h
cc/pure/: main.cc
cc/wasm/: main.cc
rust/: Cargo.toml
rust-wasm/: Cargo.toml  cbindgen.toml  main.js
rust-wasm/src/: lib.rs
rust/src/: main.rs  primes.rs
