cmake_minimum_required(VERSION 3.0.0)
project(primes VERSION 0.1.0 LANGUAGES C)

include(CTest)
enable_testing()

add_executable(primes pure/main.c)
target_link_libraries(primes m)
add_definitions(-O3)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)